--- a/css/main.css
+++ b/css/main.css
@@ -11,20 +11,20 @@ html {
   height: 100%;
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1000px) {
   html {
     font-size: 10px;
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1800px) {
   html {
     font-size: 12px;
   }
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100%;
   background-color: #fff;
   font-family: "Nunito", sans-serif; 
   position: relative;
@@ -53,15 +53,15 @@ canvas {
   height: 100%;
   width: 100%;
   min-height: 100vh;
-  padding: 5rem 3.25rem;
+  padding: 5rem 3.5rem;
 }
 
 .calc {
   position: relative;
   z-index: 5;
-  max-width: 37.5rem;
+  max-width: 38rem;
   background: #fafafa;
-  border-radius: 3rem;
+  border-radius: 3.5rem;
   text-align: center;
   position: relative;
   margin: 0 auto;
@@ -71,8 +71,8 @@ canvas {
   content: "";
   position: absolute;
   height: 110%;
-  width: 112%;
-  left: -6%;
+  width: 114%;
+  left: -7%;
   top: -5%;
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: 0px 0px 14rem -2.5rem rgba(0, 0, 0, 0.15);
@@ -83,11 +83,11 @@ canvas {
 h1 {
   font-weight: bold;
   font-size: 3rem;
-  padding: 2.5rem 0;
+  padding: 3rem 0 2.5rem;
 }
 
 .calc__content {
-  padding: 0 3.75rem;
+  padding: 0 5rem;
 }
 
 .calc__input {
@@ -100,19 +100,19 @@ h1 {
 
 .calc__input label {
   display: block;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 600;
   color: #000;
-  margin-bottom: 2rem;
+  margin-bottom: 1.25rem;
 }
 
 .calc__input input {
   outline: none;
   border: none;
-  border-bottom: 0.1rem solid #4f7df9;
+  border-bottom: 1px solid #4f7df9;
   width: 60%;
   text-align: center;
-  font-size: 2.25rem;
+  font-size: 3rem;
   font-family: "Nunito", sans-serif;
 }
 
@@ -135,14 +135,14 @@ h1 {
 }
 
 .calc__res {
-  padding: 2.5rem 2.25rem;
+  padding: 2.5rem;
 }
 
 .calc__res p {
   font-weight: 600;
   font-size: 2rem;
   color: #000;
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
 }
 
 .calc__res #result {
@@ -153,7 +153,7 @@ h1 {
   display: inline-block;
   padding: 0.75rem 2.25rem;
   border-radius: 5rem;
-  margin-bottom: 2rem;
+  margin: 1rem 0 2rem;
 }
 
 .calc__res #comment {
